--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,9 @@ unsafe_impl = []
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.39.0", features = ["Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Foundation", "Win32_System_Kernel"] }
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = true
+# panic = "abort"
