--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ lto = true
 codegen-units = 1
 strip = true
 # panic = "abort"
+
+[dev-dependencies]
+libc = { version = "0.2.132", default-features = false }
