Updated manifest version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "static_args"
-version = "0.1.0-alpha.3"
+version = "0.2.0"
 edition = "2021"
 rust = "1.64"
 description = "Get static args from the os"
