--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
 unsafe_impl = []
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.39.0", features = ["Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_Foundation", "Win32_System_Kernel"] }
+windows = { version = "0.42.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Kernel"] }
 
 [profile.release]
 lto = true
