Replace deadname with my actual name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 rust = "1.64"
 description = "Get static args from the os"
 license = "MIT OR Apache-2.0"
-authors = ["Federico Maria Morrone <contact@morrone.dev>"]
+authors = ["Matilde Morrone <contact@morrone.dev>"]
 repository = "https://github.com/morr0ne/static_args"
 readme = "README.md"
 documentation = "https://docs.rs/static_args"
