--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.2.1"
 edition = "2021"
 rust = "1.64"
 description = "Get static args from the os"
-license = "MIT OR Apache-2.0"
+license = "Apache-2.0"
 authors = ["Matilde Morrone <contact@morrone.dev>"]
 repository = "https://github.com/morr0ne/static_args"
 readme = "README.md"
 documentation = "https://docs.rs/static_args"
-include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
+include = ["src/**/*.rs", "README.md", "LICENSE"]
 
 [features]
 unsafe_impl = []
